fix: set spacing between text and globe icon to be 10px by setting the padding-right to 16px which is the size of the icon

--- a/public/sass/custom/slots/header.scss
+++ b/public/sass/custom/slots/header.scss
@@ -143,7 +143,7 @@ body {
                     a[hreflang] {
                       &:after {
                         content: '';
-                        padding-right: 2 * $spacing;
+                        padding-right: 16px;
                         padding-left: 10px;
                         background: $data-language-black-svg no-repeat right;
                         background-size: 16px;
