--- a/public/sass/custom/slots/mobileMenu.scss
+++ b/public/sass/custom/slots/mobileMenu.scss
@@ -278,7 +278,7 @@
                             padding-top: 6px;
                             &:after {
                               content: '';
-                              padding-right: 2 * $spacing;
+                              padding-right: 16px;
                               padding-left: 10px;
                               background: $data-language-white-svg no-repeat right;
                               background-size: 16px;
